syntax = "proto3";

option csharp_namespace = "Art.Framework.ApiNetwork.Grpc.Api.CageOrnament";

import "proto/data.proto";

package apb.api.cageornament;

service CageOrnamentService {
	rpc ReceiveReward (ReceiveRewardRequest) returns (ReceiveRewardResponse);
}

message ReceiveRewardRequest {
	int32 cageOrnamentId = 1;
}

message ReceiveRewardResponse {
	repeated CageOrnamentReward cageOrnamentReward = 1;
	map<string, apb.api.data.DiffData> diffUserData = 99;
}

message CageOrnamentReward {
	int32 possessionType = 1;
	int32 possessionId = 2;
	int32 count = 3;
}
